# Kutinf

./: README.md
bead/: CMakeLists.txt  main.c  test1.c
bead/plot/: CMakeLists.txt
bead/plot/script/: gp.plt
